fix code line height on iOS (#95)

--- a/themes/clean/assets/css/code.css
+++ b/themes/clean/assets/css/code.css
@@ -98,3 +98,12 @@
 /* TextWhitespace */ .chroma .w {  }
 
 
+/* Fixes iOS font sizing anomaly
+   See https://github.com/adityatelange/hugo-PaperMod/issues/828#issuecomment-1171994855
+*/
+code {
+    text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+}
